fixed padding top and bottom on mobile design

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ button:hover{
   }
   .layout-container{
     flex-direction: column;
+    padding: 100px 0;
   }
   .sedan{
     border-radius: 8px 8px 0 0;
